# pypic

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
pypic/: __init__.py  context.py  objects.py  pikchr.py  utils.py
pypic/backend/: __init__.py  base_render.py  kroki_render.py  pipeline.py
pypic/grammar/: context.py  objects.py  utils.py
pypic/grammer/: __init__.py  context.py  objects.py  utils.py
pypic/sugar/: __init__.py  connector.py
tests/: hello_world.py
