[project]
name = "pypic"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuqing Yang",email = "yuqyang@microsoft.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "pytest (>=8.3.4,<9.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
